force-app/main/default/objects/Business_Config__c/Business_Config__c.object-meta.xml
<CustomObject>
    <description>This object hold records of all trigger and business process data for a specific country and recordtypeid</description>
    <label>Business Config</label>
    <nameField>
        <label>Business Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>