force-app/main/default/objects/Business_Config__c/fields/Business_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule_Name__c</fullName>
    <description>eg: winbackDueDays, owner,..</description>
    <label>Business Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>