force-app/main/default/objects/Business_Config__c/fields/Business_Rule_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule_Value__c</fullName>
    <description>eg: 20,xxxxxxxxxxxx(ID),...</description>
    <inlineHelpText>if the value is ID then add only 18 character valid id.</inlineHelpText>
    <label>Business Rule Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>