force-app/main/default/objects/Business_Config__c/fields/Id_Country__c.field-meta.xml
<CustomField>
    <fullName>Id_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup field to Country object</description>
    <label>Id Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Business Configs</relationshipLabel>
    <relationshipName>Business_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>