force-app/main/default/objects/Business_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag for the business process</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>