force-app/main/default/objects/Business_Config__c/fields/Is_Json__c.field-meta.xml
<CustomField>
    <fullName>Is_Json__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if the business value contains json content</description>
    <label>Is Json</label>
    <type>Checkbox</type>
</CustomField>