force-app/main/default/objects/Business_Config__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To distinguish between additional rule and the main rule</description>
    <label>Parent</label>
    <type>Checkbox</type>
</CustomField>