force-app/main/default/objects/Business_Config__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>eg: xxxxxxxxxxxxx(record type id)</description>
    <inlineHelpText>Add only 18 character valid ID</inlineHelpText>
    <label>Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>