force-app/main/default/objects/Business_Config__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the process</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>