force-app/main/default/objects/Business_Config__c/listViews/BatchSchedulerForOpportunity.listView-meta.xml
<ListView>
    <fullName>BatchSchedulerForOpportunity</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Id_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Name__c</field>
        <operation>equals</operation>
        <value>BatchSchedulerForOpportunity</value>
    </filters>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BatchSchedulerForOpportunity</label>
    <language>en_US</language>
    <sharedTo>
        <group>Salesforce_Admin</group>
    </sharedTo>
</ListView>