force-app/main/default/objects/Business_Config__c/listViews/CaseEscalationLogic.listView-meta.xml
<ListView>
    <fullName>CaseEscalationLogic</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Business_Rule_Name__c</columns>
    <columns>Business_Rule_Value__c</columns>
    <columns>Record_Type_Id__c</columns>
    <columns>Id_Country__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Process_Name__c</field>
        <operation>equals</operation>
        <value>CaseEscalationLogic</value>
    </filters>
    <label>CaseEscalationLogic</label>
    <language>en_US</language>
</ListView>