force-app/main/default/objects/Business_Config__c/listViews/CD_BConfig.listView-meta.xml
<ListView>
    <fullName>CD_BConfig</fullName>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Business_Rule_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Business_Rule_Value__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Id_Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_Country__c</field>
        <operation>equals</operation>
        <value>Peru</value>
    </filters>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CD BConfig</label>
    <language>en_US</language>
</ListView>