force-app/main/default/objects/Business_Config__c/listViews/Hungary.listView-meta.xml
<ListView>
    <fullName>Hungary</fullName>
    <columns>NAME</columns>
    <columns>Id_Country__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Business_Rule_Name__c</columns>
    <columns>Business_Rule_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Record_Type_Id__c</field>
        <operation>startsWith</operation>
        <value>HU_</value>
    </filters>
    <label>Hungary</label>
    <language>en_US</language>
</ListView>