force-app/main/default/objects/Business_Config__c/listViews/PY_Configs.listView-meta.xml
<ListView>
    <fullName>PY_Configs</fullName>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Business_Rule_Name__c</columns>
    <columns>Business_Rule_Value__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Record_Type_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Record_Type_Id__c</field>
        <operation>startsWith</operation>
        <value>PY_</value>
    </filters>
    <label>PY Configs</label>
    <language>en_US</language>
</ListView>