force-app/main/default/objects/Business_Config__c/listViews/Sweden.listView-meta.xml
<ListView>
    <fullName>Sweden</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Id__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Business_Rule_Name__c</columns>
    <columns>Business_Rule_Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Id__c</field>
        <operation>startsWith</operation>
        <value>SE_</value>
    </filters>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sweden</label>
</ListView>