force-app/main/default/objects/Business_Config__c/listViews/Sweden_Configs.listView-meta.xml
<ListView>
    <fullName>Sweden_Configs</fullName>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Business_Rule_Name__c</columns>
    <columns>Business_Rule_Value__c</columns>
    <columns>Is_Active__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Id__c</field>
        <operation>startsWith</operation>
        <value>SE</value>
    </filters>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sweden - Configs</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
    </sharedTo>
</ListView>