force-app/main/default/objects/Business_Config__c/listViews/Talabat.listView-meta.xml
<ListView>
    <fullName>Talabat</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Id__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Business_Rule_Name__c</columns>
    <columns>Business_Rule_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Id__c</field>
        <operation>contains</operation>
        <value>Talabat</value>
    </filters>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Talabat</label>
    <sharedTo>
        <role>Global_Admin</role>
        <role>Global_Management</role>
    </sharedTo>
</ListView>